--- a/py_src/cmsproject/templates/col_one.html
+++ b/py_src/cmsproject/templates/col_one.html
@@ -4,11 +4,6 @@
 {% block tpl_id %}tpl_col_one{% endblock %}
 
 {% block content %}
-<div id="main_holder" class="container_16 clearfix">
-	<div class="grid_11">
-		<h1>{% page_attribute title %}</h1>
-	</div>
-	
 	{% comment %}
 	<div id="feature_standard_top">
 		{% block feature_standard_top %}&nbsp;{% endblock %}
@@ -16,9 +11,9 @@
 	{% endcomment %}
 	
     <div id="col1" class="grid_16">
+		{% block page_title %}<h1>{% page_attribute title %}</h1>{% endblock %}		
 		{% block col_left %}
-			{% placeholder col_left 16_16 %}
+			{% placeholder col_left "940" %}
 		{% endblock %}
 	</div>
-</div>
 {% endblock %}
