--- a/py_src/cmsproject/templates/col_three.html
+++ b/py_src/cmsproject/templates/col_three.html
@@ -4,27 +4,22 @@
 {% block tpl_id %}tpl_col_three{% endblock %}
 
 {% block content %}
-<div id="main_holder" class="container_16 clearfix">
-	<div class="grid_11">
-		<h1>{% page_attribute title %}</h1>
+	<div class="grid_16">
+		{% block page_title %}<h1>{% page_attribute title %}</h1>{% endblock %}
 	</div>
-		
-    <div id="col1" class="grid_6 border_right">
+    <div id="col1" class="grid_5">
 		{% block col_left %}
-	    	{% placeholder col_left 6_16 %}
+	    	{% placeholder col_left "280" %}
 		{% endblock %}
 	</div>
-	
-    <div id="col2" class="grid_5 border_right">
+    <div id="col2" class="grid_6">
 		{% block col_middle %}
-			{% placeholder col_middle 5_16 %}
+			{% placeholder col_middle "340" %}
 		{% endblock %}
     </div>
-	
     <div id="col3" class="grid_5">
 		{% block col_right %}
-			{% placeholder col_right 5_16 %}
+			{% placeholder col_right "280" %}
 		{% endblock %}
 	</div>
-</div>
 {% endblock %}
