--- a/py_src/cmsproject/templates/col_two.html
+++ b/py_src/cmsproject/templates/col_two.html
@@ -1,24 +1,21 @@
 {% extends "base.html" %}
-{% load cms_tags %}
+{% load i18n cms_tags %}
 
 {% block tpl_id %}tpl_col_two{% endblock %}
 
 {% block content %}
-<div id="main_holder" class="container_16 clearfix">
-		<div class="grid_11 border_right_2">
-			{% block page_title %}
-			<h1>{% page_attribute title %}</h1>
-			{% endblock %}
-		</div>
-	    <div id="col1" class="grid_11 border_right">
-			{% block col_left %}
-		    	{% placeholder col_left 16_11 %}
-			{% endblock %}
-	    </div>
-	    <div id="col2" class="grid_5 omega">
-			{% block col_right %}
-				{% placeholder col_right 16_5 %}
-			{% endblock %}
-	    </div>
-</div>
+    <div id="col1" class="grid_4 alpha omega nav_sub_column">	    
+		{% include "sidebar_submenu.html" %}
+	
+		{% block col_left %}
+	    	{% placeholder col_left "220" %}
+		{% endblock %}
+    </div>
+	
+    <div id="col2" class="grid_11 push_1">
+    	{% block page_title %}<h1>{% page_attribute title %}</h1>{% endblock %}
+		{% block col_right %}
+			{% placeholder col_right "640" %}
+		{% endblock %}
+    </div>
 {% endblock %}
